--- a/trunk/modules/catalog/views/scripts/index/category.phtml
+++ b/trunk/modules/catalog/views/scripts/index/category.phtml
@@ -10,8 +10,14 @@
 		$headMeta->appendName('description', $this->categoryRow->meta_description);
 	}
 ?>
+<?php $partialAZ = $this->partial('_partial/az.phtml', array('string' => $this->string,'az' => $this->az)) ?>
+
+<?php print $partialAZ?>
+
 <form method="get" action="<?php print $this->valuesQuery?>">
 <?php
 	print $this->grid->render($this);
 ?>
 </form>
+
+<?php print $partialAZ?>
