--- a/trunk/modules/catalog/views/scripts/index/index.phtml
+++ b/trunk/modules/catalog/views/scripts/index/index.phtml
@@ -1,5 +1,11 @@
+<?php $partialAZ = $this->partial('_partial/az.phtml', array('string' => $this->string,'az' => $this->az)) ?>
+
+<?php print $partialAZ?>
+
 <form method="get" action="<?php print $this->valuesQuery?>">
 <?php
 	print $this->grid->render($this);
 ?>
 </form>
+
+<?php print $partialAZ?>
