--- a/trunk/modules/admin/views/scripts/index/index.phtml
+++ b/trunk/modules/admin/views/scripts/index/index.phtml
@@ -47,6 +47,10 @@
 	
 	<h5>Rozszerzenia opcji zarządzania stroną internetową</h5>
 	<div class="span-4">
+		<a class="action big form" href="<?php print $this->url(array('module' => 'forms', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Formularz</a>
+		<p>Tworzenie formularzy</p>
+	</div>
+	<div class="span-4">
 		<p><a class="action big calendar" href="<?php print $this->url(array('module' => 'calendar', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Kalendarium</a></p>
 		<p>Kalendarz i niezapominajka wydarzeń</p>
 	</div>
