Update mudules, forms and catalog and now ZF 1.7 is requred!!

--- a/modules/catalog/views/scripts/index/map.phtml
+++ b/modules/catalog/views/scripts/index/map.phtml
@@ -328,6 +328,9 @@ $(document).ready(function(){
 		// czyscimy mape
 		map.clearOverlays();
 
+		// pierwszy marker - ustawiamy mapCenter
+		var firstMarker = false;
+
 		// sprawdzamy czy sa rekordy
 		var dataRowset = getDataRowset();
 
@@ -365,6 +368,12 @@ $(document).ready(function(){
 						} else {
 							addMarkerById(marker, dataRowset[i].id);
 						}
+					}
+
+					// pierwszy marker
+					if (false === firstMarker) {
+						firstMarker = true;
+						map.setCenter(marker.getLatLng());
 					}
 
 					// dodajemy do mapy
