--- a/trunk/modules/forms/views/scripts/constructor/index.phtml
+++ b/trunk/modules/forms/views/scripts/constructor/index.phtml
@@ -199,6 +199,7 @@ var WFormElement = {
 	options: {
 		label: null,
 		value: null,
+		order: null,
 		ignore: false,
 		required: false,
 		description: null,		
@@ -218,6 +219,7 @@ var WFormElement = {
 		this.options = {
 			label: null,
 			value: null,
+			order: null,
 			required: false,
 			description: null,		
 			validators: []
@@ -398,6 +400,14 @@ var WFormElement = {
 		return this.options.value;
 	},
 
+	setOrder: function (order) {
+		this.options.order = order;
+	},
+	
+	getOrder: function () {
+		return this.options.order;
+	},
+
 	setLabel: function (label) {
 		this.options.label = label;
 	},
@@ -497,19 +507,79 @@ var WFormManager = {
 	clear: function(){
 		this.elements = [];
 	},
+
+	_order: [],
+
+	setOrder: function(order) {
+		this._order = order;
+	},
+
+	getOrder: function() {
+		return this._order;
+	},
+
+	resetOrder: function() {
+		this._order = null;
+		this._order = [];
+	},
+
+	_orderAlgorithm: function(a,b) {
+		// tak musi być bo uchwyt w [].sort(callback) nie odwoluje się do this..
+		
+		var elements = WFormManager.getElements();
+		var positionA = elements.indexOf(a);
+		var positionB = elements.indexOf(b);
+
+		if (positionB == -1) {
+			return 1;
+		} else 
+		if (positionA == -1){
+			return -1;
+		}
+
+		// w [].indexOf(positionA) wartosc elemntu listy jest string!
+		positionA = positionA.toString();
+		positionB = positionB.toString();
+
+		var order = WFormManager.getOrder();
+		var keyA = order.indexOf(positionA.toString());
+		var keyB = order.indexOf(positionB.toString());
+		
+		console.log(keyA,keyB);
+		return keyA - keyB;
+
+		if (keyA > keyB) {
+			console.log('>');
+			
+		} else
+		if (keyA < keyB) {
+			console.log('>');
+			return -1;
+		}
+
+		console.log('=');
+		return 0;
+	},
 	
 	toString: function(el) {
 		for(var i = 0; i < this.elements.length; i++) {
-			el.append($('<li>').html(this.elements[i].toString()));
+			el.append($('<li>')
+						.attr('id',i)
+						.html(this.elements[i].toString()));
 		}
 	},
 
 	toObject: function() {
+		console.log('ilosc elementów:' + this.elements.length);
+
 		var obj = {elements:{}};
-		console.log(this.elements.length);
-		for(var i = 0; i < this.elements.length; i++) {
-			var el = this.elements[i];
-			obj.elements[el.getName()] = this.elements[i].toObject();
+
+		// sortujemy
+		var elements = this.elements.sort(this._orderAlgorithm);
+		for(var i = 0; i < elements.length; i++) {
+			var el = elements[i];
+			el.setOrder(i);
+			obj.elements[el.getName()] = el.toObject();
 		}
 
 		return obj;
@@ -528,6 +598,7 @@ var WFormManager = {
 
 		element.setOptions(elementJOSN.options);
 		element.setType(elementJOSN.type);
+		element.setName(elementJOSN.name);
 		element.setPreview($('[elementType='+elementJOSN.type+']'));
 
 		return element;
@@ -571,6 +642,8 @@ $(function() {
 	var formConstructor = $('#forms-constructor').sortable({
 		forcePlaceholderSize: true,
 		update: function(e, ui){
+			console.log($(this).sortable('toArray'));
+			WFormManager.setOrder($(this).sortable('toArray'));
 		}
 	});
 
