Update mudule forms

--- a/modules/catalog/views/scripts/index/map.phtml
+++ b/modules/catalog/views/scripts/index/map.phtml
@@ -371,6 +371,9 @@ $(document).ready(function(){
 					}
 
 					// pierwszy marker
+					// dzieki temu mamy ładne centrowanie!
+					// dziala przy zaznaczonej 1dnej dzielnicy
+					// przy wiekszej ilosci nic nie zmienia
 					if (false === firstMarker) {
 						firstMarker = true;
 						map.setCenter(marker.getLatLng());
