--- a/trunk/modules/forms/views/scripts/index/show.phtml
+++ b/trunk/modules/forms/views/scripts/index/show.phtml
@@ -1,3 +1,9 @@
-<?php
-	print $this->form;
-?>
+<h2><?php print $this->subject?></h2>
+<div>
+	<div>
+		<?php print $this->form;?>
+	</div>
+	<div>
+		<?php print $this->html;?>
+	</div>
+</div>
