Update mudule forms

--- a/modules/forms/views/scripts/_partial/common_head.phtml
+++ b/modules/forms/views/scripts/_partial/common_head.phtml
@@ -1,5 +1,5 @@
 <h2>
-	<a href="<?= $this->url(array('controller' =>'admin','action' => 'index')); ?>">Katalog</a>
+	<a href="<?= $this->url(array('controller' =>'admin','action' => 'index')); ?>">Formularz</a>
 <?php
 	// doawanie specyfikacji
 	switch ($this->controller) {
