--- a/modules/catalog/views/scripts/index/add.phtml
+++ b/modules/catalog/views/scripts/index/add.phtml
@@ -1,7 +1,17 @@
 <h2>Jak dodać wpis?</h2>
 <div class="span-9">
-	<h2>Wyślij zgłoszenie na e-mail</h2>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>	
+	<h2>Zgłoszenie na adres e-mail</h2>
+	<ol>
+		<li>Proszę pobrać i wypełnić <a href=""><img src="images/page_word.png" />formularz zgłoszeniowy</a></li>
+		<li>Wypełniony formularz prosimy przesłaćw na adres email: <a href="mailto:zgloszenie@stomatolodzy.krakow.pl">zgloszenie@stomatolodzy.krakow.pl</a></li>
+	</ol>
+	
+	<h2>Zgłoszenie faksem</h2>
+	<ol>
+		<li>Proszę pobrać i wypełnić <a href=""><img src="images/page_acrobat.png	" />formularz zgłoszeniowy</a></li>
+		<li>Wypełniony formularz prosimy przesłać listowanie lub faksem na adres:</li>
+	</ol>
+	
 </div>
 <div class="span-9 last">
 	<h2>Wypełnij formularz zgłoszeniowy</h2>
