--- a/modules/admin/views/scripts/index/index.phtml
+++ b/modules/admin/views/scripts/index/index.phtml
@@ -27,8 +27,9 @@
 		<p>Aktualności i komunikaty</p>
 	</div>
 	<div class="span-4">
-		<p><a class="action big gallery" href="<?php print $this->url(array('module' => 'gallery', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Galeria</a></p>
-		<p>Grupowanie zdięć w galerie i kategorie</p>
+		<p>
+			<a class="action big gallery" href="<?php print $this->url(array('module' => 'gallery', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Galeria</a></p>
+		<p>Grupowanie zdięć w galerie i kategorie. <a title="Zaawansowane zarządzanie galerią" class="action small hot ico" href="<?php print $this->url(array('module' => 'gallery', 'controller' => 'gwt', 'action' => 'index'),'default',true); ?>">GWT</a></p>
 	</div>
 	
 	<hr/>
