--- a/modules/catalog/views/scripts/index/category-no-exsists.phtml
+++ b/modules/catalog/views/scripts/index/category-no-exsists.phtml
@@ -1,1 +1,6 @@
-Kategoria nie istnieje
+<h2>Kategoria nie została odnaleziona!</h2>
+
+<ul>
+	<li><a href="">Zobacz spis dentystów w Krakowie</a></li>
+	<li><a href="<?php print $this->url(array(),'catalogMap',true) ?>">Znajdz klinikę na mapie</a></li>
+</ul>
