--- a/modules/catalog/views/scripts/index/show.phtml
+++ b/modules/catalog/views/scripts/index/show.phtml
@@ -61,7 +61,7 @@
 		<dd>
 			<span class="type-ico">
 			<?php if(count($this->typeRow)):?>
-				<img src="upload/catalog/ico/<?php print $this->typeRow->ico?>" title="<?php print $this->typeRow->name ?>" />
+				<img src="upload/catalog/type/<?php print $this->typeRow->ico?>" title="<?php print $this->typeRow->name ?>" />
 			<?php endif;?>
 			</span>
 			
@@ -128,7 +128,7 @@
 	<dt>
 		<span class="service-ico">
 		<?php if(count($sevice->ico)):?>
-			<img src="upload/catalog/ico_service/<?php print $sevice->ico?>" title="<?php print $sevice->name ?>" />
+			<img src="upload/catalog/service/<?php print $sevice->ico?>" title="<?php print $sevice->name ?>" />
 		<?php endif;?>
 		</span>
 
