--- a/modules/catalog/views/scripts/index/show-error.phtml
+++ b/modules/catalog/views/scripts/index/show-error.phtml
@@ -1,1 +1,6 @@
-<p class="msg-error">Wpis o takiej nazwie nie istnieje!</p>
+<h2>Wizytówka nie została odnaleziona!</h2>
+
+<ul>
+	<li><a href="">Zobacz spis dentystów w Krakowie</a></li>
+	<li><a href="<?php print $this->url(array(),'catalogMap',true) ?>">Znajdz klinikę na mapie</a></li>
+</ul>
